# arduino

./: .gitignore  .gitmodules  README.md  generate_speaker_tones.rb
buzztest/: buzztest.ino
clitest/: cli.h  cli.ino  clitest.ino  logger.h  logger.ino
digidice/: dice_schematic.fzz  digidice.ino  key.h  key.ino  pulse.h  pulse.ino  sevenseg.h  sevenseg.ino  speaker.h  speaker.ino  speaker_tones.h
hardware/bb/avr/: boards.txt  programmers.txt
hardware/bugslayer/avr/: .gitignore  boards.txt  platform.txt  programmers.txt
lcdtest/: BitBangLcd.cpp  BitBangLcd.h  Lcd.cpp  Lcd.h  Lcd2004.cpp  Lcd2004.h  PortLcd.cpp  PortLcd.h  WiredLcd.cpp  WiredLcd.h  lcd.h  lcd.ino  lcd_on_i2c.ino  lcd_on_ports.ino  lcdtest.ino  speaker.h  speaker.ino
libraries/: README.3rdparty  SoftI2CMaster  arduino-tvout
libraries/Button/: Button.cpp  Button.h  keywords.txt
libraries/Button/examples/button_test/: button_test.ino
libraries/Speaker/: Speaker.cpp  Speaker.h  keywords.txt  speaker_tones.hx
libraries/Speaker/examples/greeting/: greeting.ino
local/: .gitignore  .projections.json  Doxyfile  Makefile.am  Rakefile  configure.ac  local.vim
local/autostuff/: cpputest.m4  googleperftools.m4  googletest.m4
local/src/: Makefile.am  cli.cc
local/tests/: Makefile.am  test_cppusanity.cc  test_helper.h  test_main.cc  test_sanity.cc
scripts/: generate_speaker_tones.rb
serlogger/: serlogger.ino
speedtest/: speedtest.ino
